# CoWFSim

./: CMakeLists.txt  README.md  SimInitialize.h  SimInitializePreb.h  main.cpp
files/graphic/menus/: d_mCellViewLayer.txt  d_mCompPaymentsViewLayer.txt  d_mCompViewLayer.txt  d_mCompViewMoreLayer.txt  d_mCompViewProcessingLayer.txt  d_mGUIClock.txt  d_mGlobalAttrViewLayer.txt  d_mHomeViewLayer.txt  d_mProductListViewLayer.txt  d_mRoadsViewCrossing.txt  d_mRoadsViewLayer.txt  d_mRoadsViewPresentLayer.txt  d_mSelectLayer.json  d_mSelectLayer.txt  d_mTrainStationLayer.txt  mCellViewLayer.txt  mCompPaymentsViewLayer.txt  mCompViewLayer.txt  mCompViewMoreLayer.txt  mCompViewProcessingLayer.txt  mGUIClock.txt  mGlobalAttrViewLayer.txt  mHomeViewLayer.txt  mProductListViewLayer.txt  mRoadsViewCrossing.txt  mRoadsViewLayer.txt  mRoadsViewPresentLayer.txt  mSelectLayer.txt  mTrainStationLayer.txt
files/import/: impFile.txt
files/objCollectives/: FObjProduced.csv  FObjProduced.ods  FRoadValid.txt
files/test/: rReaderTest1.txt  rReaderTest2.txt
src/IO/: ReaderParameters.h
src/common/: RelPath.h  gCSVLoader.h  r2BitDirection.h  sContainerMain.h  sMainContainer.h
src/display/: CameraControls.h  rGlobal.cpp  rGlobal.h  rPileMenus.h  rRemoteUpdateGrid.h  rgTerrain.h
src/display/layers/: gDispLayers.h  gILayer.h  gSimLayers.h
src/display/layers/implementation/: gLayerAirPollution.h  gLayerCity.h  gLayerTransit.h  gLayerUnderground.h
src/display/layers/tileset/: gTileset.h
src/display/menus/: oCommonMenus.h  rIMenu.h  rIScrollableMenu.h
src/display/menus/implementation/: rBaseMenu.h  rCellViewMenu.h  rCompViewLayer.h  rRoadViewMenu.h  rSelOptMenu.cpp  rSelOptMenu.h
src/display/menus/implementation/AlwaysOD/: rGUIClock.h
src/display/menus/implementation/company/: rCompPaymentsViewLayer.h  rCompViewLayer.h  rCompViewMoreLayer.h  rCompViewProcessing.h
src/display/menus/implementation/global/: rGlobalAttrViewLayer.h
src/display/menus/implementation/home/: rHomeViewLayer.h
src/display/menus/implementation/products/: rProductsListViewLayer.h
src/display/menus/implementation/rRoadView/: rRoadCrossView.h  rRoadLineView.h  rRoadPresentView.h  rRoadViewMenu.h
src/display/menus/implementation/station/: rStationViewLayer.h
src/display/menus/implementations/: rBaseMenu.h  rRoadViewMenu.h  rSelOptMenu.cpp  rSelOptMenu.h
src/display/transformations/: gTransSimToDisp.h
src/sim/: sMainSimulator.h  sSimulatorMain.h  snCommonAtr.h
src/sim/behaviour/: gTerrainGrid.h  iVectorStorage.h  sCompanyCompiler.h  sgTerrain.h
src/sim/behaviour/airPollution/: gMainAirPollution.h
src/sim/behaviour/clock/: sClockMain.h  sMainClock.h
src/sim/behaviour/company/: sCompanyActions.h  sCompanyCompiler.h  sCompanyMain.h  sCompanyStorage.h  sCompanyTimer.h  sCompanyTotal.h  sMCompany.h
src/sim/behaviour/company/code/: sCodeStoratge.h
src/sim/behaviour/company/code/implementations/: isCode.h  sCodeGenetic.h  sCodeManual.h
src/sim/behaviour/company/contract/: sContractorMain.h  sContractorStorage.h  sContractorTimer.h  sMainContractor.h
src/sim/behaviour/company/employee/: sCivilMain.h  sCivilStorage.h  sMainCivil.h  sTotalEmploye.h  sTotalEmployee.h
src/sim/behaviour/company/production/: sTotalRecipes.h
src/sim/behaviour/globalAttr/: sEnergyAttr.h  stGlobalAttr.h  stGlobalTrackerAttr.h
src/sim/behaviour/interface/: iStorage.h
src/sim/behaviour/market/: sEvaluatorMain.h  sMMarket.h  sMainEvaluator.h  sMarketBazaar.h  sMarketListing.h
src/sim/behaviour/market/items/: sObjProduct.h  sProductTimer.h  sRollingListsEvaluator.h  sTotalElements.h
src/sim/behaviour/market/listings/: sIListing.h  sRollingListsRent.h
src/sim/behaviour/market/listings/implementations/: sLBuyCell.h  sLRentCell.h
src/sim/behaviour/metro/: gMainUnderground.h  sgUndergroundMain.h
src/sim/behaviour/recording/: sSituationCivilTracker.h  sStorageCivilRoutineState.h
src/sim/events/: sEventManager.h  sEventReceiver.h
src/sim/eyeCatcher/: eyeCatcherActive.h  eyeCatcherConnection.h  eyeTotalTick.h  eyeValue.h
src/sim/groups/groupEconomy/: groupEconomy.h
src/sim/groups/groupLand/: groupLand.h  sgAirPollutionMain.h  sgTerrain.h  sgUndergroundMain.h
src/sim/layers/implementations/: sLayerCells.h  sLayerType.h
src/sim/roads/: rCycle.h  rNodeFromGrid.h  rTransRNodeToRRNode.h  sMainRoads.h  sgAStarRoad.h  sgRoadsMain.h
src/sim/roads/node/: rInfoDists.h  rNode.h  rRNode.h
src/sim/roads/node/RNodeAttrs/: rRMailbox.h
src/sim/roads/transportation/: gUniqueId.h  rActiveVehicles.h  rToFollowDest.h
src/sim/structure/grids/: gBasicGrid.h  gIGrid.h  gSinNodes.h
src/sim/structure/grids/transformation/: gBaseClosestToPoint.h  gBaseToBorderDetection.h  gBaseToField.h  gBaseToGradientMinimum.cpp  gBaseToGradientMinimum.h  gBaseToIRF.h  gBaseToInertiaRoads.h  gBaseToLineRoads.h  gBaseToNearestRoad.h  gBaseToPattern.h  gBaseToRiver.h  gBaseToStartBuildings.h  gBaseToWFC.h  gBasicTransformations.h  gPointToNearestElem.h  sGridToSimulator.h
src/sim/structure/grids/transformation/cEspec/: gHelpBlobbing.h  gHelpPerlinNoise.h
src/tests/: tst_Reader.h  tst_TransRNodeRRNode.h  tst_gBasicDisplay.h  tst_gBasicDisplayGround.h  tst_gBasicGrid.h  tst_gBasicNewWay.h  tst_gBasicPattern.h  tst_gBasicRiver.h  tst_gBasicWFC.h  tst_gBasicWFCBasic.h  tst_gBtoGM.h  tst_gERCComm.h  tst_gExtractRoads.h  tst_gExtractRoadsCompressed.h  tst_gGaussian.h  tst_gGenericKernel.h  tst_gMenus.h  tst_gNewVisualitzation.h  tst_gVeh.h  tst_gWindExpansion.h
